tests/build/widget/capture_is_required_for_instance.stderr
error: missing required property `foo`
  --> $DIR/capture_is_required_for_instance.rs:3:1
   |
3  | #[widget($crate::test_widget)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
19 |     let _ = test_widget!();
   |             -------------- in this macro invocation
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
